# apflow-demo

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml
demo/: config.yaml  demo_tasks.json
demo/precomputed_results/: .gitkeep
docker/: Dockerfile  Dockerfile.dev
docs/: requirements.md
scripts/: deploy.sh  precompute_demo_results.py  setup_demo_data.py
src/aipartnerupflow_demo/: __init__.py  cli.py  main.py
src/aipartnerupflow_demo/api/: __init__.py  a2a_server.py  server.py
src/aipartnerupflow_demo/api/middleware/: __init__.py  demo_mode.py  quota_limit.py  rate_limit.py  session_cookie.py
src/aipartnerupflow_demo/api/routes/: auth_routes.py  demo_routes.py  executor_routes.py  quota_routes.py  quota_task_routes.py
src/aipartnerupflow_demo/cli/: __init__.py  users.py
src/aipartnerupflow_demo/config/: __init__.py  settings.py
src/aipartnerupflow_demo/extensions/: __init__.py  custom_task_model_extension.py  demo_results.py  quota_executor_hooks.py  quota_hooks.py  rate_limiter.py  usage_tracker.py
src/aipartnerupflow_demo/services/: __init__.py  demo_init.py  executor_demo_init.py  user_service.py
src/aipartnerupflow_demo/storage/: __init__.py  models.py  quota_repository.py
src/aipartnerupflow_demo/utils/: __init__.py  header_utils.py  jwt_utils.py  task_detection.py  user_identification.py
src/apflow_demo/: __init__.py  main.py
src/apflow_demo/api/: __init__.py  server.py
src/apflow_demo/cli/: __init__.py  serve.py  users.py
src/apflow_demo/config/: __init__.py  settings.py
src/apflow_demo/extensions/: __init__.py  custom_task_model_extension.py  quota_executor_hooks.py  quota_hooks.py  rate_limiter.py  usage_tracker.py
src/apflow_demo/services/: demo_init.py  executor_demo_init.py  user_service.py
src/apflow_demo/storage/: __init__.py  models.py  quota_repository.py
src/apflow_demo/utils/: __init__.py  header_utils.py  jwt_utils.py  task_detection.py  user_identification.py
tests/: __init__.py  conftest.py  test_cli_wrapper.py  test_demo_features.py  test_executor_demo_data_validation.py  test_executor_demo_execution.py  test_executor_demo_init.py
(+10 files in other folders)
